--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fhirpath",
-  "version": "4.8.3",
+  "version": "4.8.4",
   "description": "A FHIRPath engine",
   "main": "src/fhirpath.js",
   "types": "src/fhirpath.d.ts",
@@ -17,6 +17,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
+    "baseline-browser-mapping": "^2.9.14",
     "benny": "github:caderek/benny#0ad058d3c7ef0b488a8fe9ae3519159fc7f36bb6",
     "bestzip": "^2.2.0",
     "copy-webpack-plugin": "^12.0.2",
