--- a/test/cases/6.6_math.yaml
+++ b/test/cases/6.6_math.yaml
@@ -58,18 +58,27 @@ tests:
   - desc: '** Empty result when one of the operands has a special unit'
     expression: 1 'B' * 2
     result: []
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (1)'
-    expression: 1 'm' * 1 year
-    result: []
-  - desc: '** Can multiply a quantity by a calendar duration quantity less than or equal to seconds (1)'
-    expression: 1 'm' * (1 year).toQuantity('seconds') = 31536000 'm.s'
-    result: [true]
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (2)'
-    expression: 1 year * 1 year
-    result: []
   - desc: '** Can multiply a quantity by a calendar duration quantity less than or equal to seconds (2)'
-    expression: (1 year).toQuantity('s') * (1 year).toQuantity('seconds') = 994519296000000 's2'
+    expression: (1 year).toQuantity('seconds').toQuantity('s') * (1 year).toQuantity('seconds') = 994519296000000 's2'
     result: [true]
+  - 'group: Incompatible duration units in multiplication':
+    - expression: 1 'a' * 1 second
+      result: []
+    - expression: 1 second * 1 'a'
+      result: []
+    - expression: 1 'm' * 1 year
+      result: []
+    - expression: 1 year * 1 year
+      result: []
+  - 'group: Compatible duration units in multiplication':
+    - expression: 1 'm' * (1 year).toQuantity('seconds') = 31536000 'm.s'
+      result: [true]
+    - expression: 1 'a' * 2 'wk' = 38172072960000 's2'
+      result: [true]
+    - expression: 2 year * 3 = 6 year
+      result: [true]
+    - expression: 2 * 1 year = 2 year
+      result: [true]
 
 
   - desc: '6.6.2 division'
@@ -118,29 +127,45 @@ tests:
   - desc: '** Empty result when one of the operands has a special unit'
     expression: 1 'B' / 2
     result: []
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (1)'
-    expression: 1 'mo' / 1 year
-    result: []
-  - desc: '** Can divide a UCUM duration quantity by a calendar duration quantity less than or equal to seconds'
-    expression: 1 'mo' / (1 year).toQuantity('seconds') = 0.08339041095890411
-    result: [true]
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (2)'
-    expression: 1 year / 1 'mo'
-    result: []
-  - desc: '** Can divide a calendar duration quantity less than or equal to seconds by a UCUM duration quantity'
-    expression: (1 year).toQuantity('seconds') / 1 'mo' = 11.991786447638603
-    result: [true]
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (3)'
-    expression: 3 minutes / 1 's'
-    result: []
+  - 'group: Incompatible duration units in division':
+    - expression: 1 'a' / 1 year
+      result: []
+    - expression: 1 'a' / 1 second
+      result: []
+    - expression: 1 year / 1 'a'
+      result: []
+    - expression: 1 second / 1 'a'
+      result: []
+    - expression: 1 'mo' / 1 year
+      result: []
+    - expression: 1 year / 1 'mo'
+      result: []
+    - expression: 1 / 3 months
+      result: []
+  - 'group: Compatible duration units in division':
+    - expression: (1 'a').toQuantity('s') / (1 year).toQuantity('seconds') = 1.0006849315068493 # 31557600 's' / (365*24*60*60) seconds
+      result: [true]
+    - expression: (1 year).toQuantity('seconds') / (1 'a').toQuantity('s') = 0.999315537303217 # 365*24*60*60 seconds - 31557600 's'
+      result: [true]
+    - expression: (1 'mo').toQuantity('s') / (1 year).toQuantity('seconds') = 0.08339041095890411
+      result: [true]
+    - expression: (1 year).toQuantity('seconds') / (1 'mo').toQuantity('s') = 11.991786447638603
+      result: [true]
+    - expression: 3 minutes / 1 's' = 180
+      result: [true]
+    - expression: 3 years / 1.5 years = 2
+      result: [true]
+    - expression: 1 year / 2 = 6 months
+      result: [true]
+    - expression: 1 year / 6 months = 2
+      result: [true]
+    - expression: 3 month / 2 year = 1 / 8
+      result: [true]
   - desc: '** Allow division of a UCUM duration quantity'
     expression: 3 's' / 3 milliseconds = 1000
     result: [true]
   - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (4)'
     expression: 1 'kg' / 3 months
-    result: []
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (5)'
-    expression: 1 / 3 months
     result: []
   - desc: '** Can divide a UCUM quantity by a calendar duration quantity less than or equal to seconds'
     expression: 1 'kg' / (3 months).toQuantity('seconds') = 0.0001286008230452675 'g/s'
@@ -148,12 +173,6 @@ tests:
   - desc: '** Empty result when a calendar duration quantity divided by zero'
     expression: 1 year / 0 months
     result: []
-  - desc: '** Can divide when both operands are calendar duration quantities'
-    expression: 3 month / 2 year = 1 / 8
-    result: [true]
-  - desc: '** Can divide a calendar duration quantity by a number'
-    expression: 1 year / 2 = 6 months
-    result: [true]
   - desc: '** Can divide System.Quantity (converted from FHIR.Quantity) by System.Quantity'
     # Since FHIR.Quantity automatically converted to System.Quantity
     # See https://hl7.org/fhir/fhirpath.html#quantity
@@ -227,26 +246,28 @@ tests:
   - desc: '** Empty result when one of the operands is null'
     expression: n1 + i
     result: []
-  - desc: '** Empty result when one of the operands has a special unit'
+  - desc: '** Special unit'
     expression: 1 'B' + 1 'B'
     result: []
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds'
-    expression: 1 'a' + 1 year
-    result: []
-  - desc: '** Can add a calendar duration quantity less than or equal to seconds to a UCUM time-valued quantity'
-    expression: 1 'a' + (1 year).toQuantity('seconds') = 63093600 seconds # 31557600 's' + 365*24*60*60 seconds
-    result: [true]
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds'
-    expression: 1 year + 1 'a'
-    result: []
-  - desc: '** Can add a UCUM time-valued quantity to a calendar duration quantity less than or equal to seconds'
-    expression: (1 year).toQuantity('seconds') + 1 'a' = 63093600 seconds # 365*24*60*60 seconds + 31557600 's'
-    result: [true]
+  - 'group: Incompatible duration units in addition':
+    - expression: 1 'a' + 1 year
+      result: []
+    - expression: 1 'a' + 1 second
+      result: []
+    - expression: 1 year + 1 'a'
+      result: []
+    - expression: 1 seconds + 1 'a'
+      result: []
+  - 'group: Compatible duration units in addition':
+    - expression: (1 'a').toQuantity('s') + (1 year).toQuantity('seconds') = 63093600 's' # 365*24*60*60 seconds + 31557600 's'
+      result: [true]
+    - expression: (1 year).toQuantity('seconds') + (1 'a').toQuantity('s') = 63093600 seconds # 365*24*60*60 seconds + 31557600 's'
+      result: [true]
   - desc: '** Changing the places of the terms may change the sum because of the year/month conversion factor'
-    expression: (1 year + 6 months).toQuantity('seconds') + 1 'a' - (2.5 days).toQuantity('seconds') = 1 'a' + (6 months).toQuantity('seconds') + (1 year).toQuantity('seconds') # 0.5 year = 365 days/2 = 182.5 days;  6 month = 180 days
+    expression: (1 year + 6 months).toQuantity('seconds') + (1 'a').toQuantity('s') - (2.5 days).toQuantity('seconds') = (1 'a').toQuantity('s') + (6 months).toQuantity('seconds') + (1 year).toQuantity('seconds') # 0.5 year = 365 days/2 = 182.5 days;  6 month = 180 days
     result: [true]
   - desc: '** Changing the places of the terms does not change the sum'
-    expression: (1 year).toQuantity('seconds') + 6 'mo' + 1 'a' = 1 'a' + 6 'mo' + (1 year).toQuantity('seconds')
+    expression: (1 year).toQuantity('seconds') + (6 'mo').toQuantity('s') + (1 'a').toQuantity('s') = (1 'a').toQuantity('s') + (6 'mo').toQuantity('s') + (1 year).toQuantity('seconds')
     result: [true]
   - desc: '** Can add a calendar duration quantity to a calendar duration quantity'
     expression: 2 years + 6 months = 2.5 year
@@ -295,24 +316,24 @@ tests:
   - desc: '** Empty result when one of the operands has a special unit'
     expression: 1 'B' - 1 'B'
     result: []
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (1)'
-    expression: 1 'a' - 1 year
-    result: []
-  - desc: '** Can subtract a calendar duration quantity less than or equal to seconds from a UCUM time-valued quantity'
-    expression: 1 'a' - (1 year).toQuantity('seconds') = 21600 seconds # 31557600 's' - 365*24*60*60 seconds
-    result: [true]
-  - desc: '** Empty result when one of the operands is a calendar duration quantity greater than seconds (1)'
-    expression: 1 year - 1 'a'
-    result: []
-  - desc: '** Can subtract a UCUM time-valued quantity from a calendar duration quantity less than or equal to seconds'
-    expression: (1 year).toQuantity('seconds') - 1 'a' = -21600 seconds  # 365*24*60*60 seconds - 31557600 's'
-    result: [true]
-  - desc: '** Can subtract a calendar duration quantity from a calendar duration quantity'
-    expression: 3 year - 1 year = 2 year
-    result: [true]
-  - desc: '** Can subtract a UCUM time-valued quantity from an UCUM time-valued quantity'
-    expression: 3 'a' - 1 'a' = 2 'a'
-    result: [true]
+  - 'group: Incompatible duration units in substraction':
+    - expression: 1 'a' - 1 year
+      result: []
+    - expression: 1 'a' - 1 second
+      result: []
+    - expression: 1 year - 1 'a'
+      result: []
+    - expression: 1 second - 1 'a'
+      result: []
+  - 'group: Compatible duration units in substraction':
+    - expression: (1 'a').toQuantity('s') - (1 year).toQuantity('seconds') = 21600 's' # 31557600 's' - 365*24*60*60 seconds
+      result: [true]
+    - expression: (1 year).toQuantity('seconds') - (1 'a').toQuantity('s') = -21600 seconds  # 365*24*60*60 seconds - 31557600 's'
+      result: [true]
+    - expression: 3 year - 1 year = 2 year
+      result: [true]
+    - expression: 3 'a' - 1 'a' = 2 'a'
+      result: [true]
 
 
   - desc: '6.6.5 div'
@@ -447,13 +468,11 @@ tests:
     - expression: "@2016-01 + 29 days"
       result: ['2016-01']
     - expression: "@2016-01 + 29 'd'"
-#      result: ['2016-01']
-      error: true
+      result: ['2016-01']
     - expression: "@2016-01 + 30 days"
       result: ['2016-02']
     - expression: "@2016-01 + 30 'd'"
-#      result: ['2016-02']
-      error: true
+      result: ['2016-02']
     - expression: "@2016-01 + 1 hour"
       result: ['2016-01']
     - expression: "@2018-01-03 + 2 years"
@@ -485,8 +504,7 @@ tests:
     - expression: "@2016-02-28 + 1 week"
       result: ['2016-03-06']
     - expression: "@2016-02-28 + 1 'wk'"
-#      result: ['2016-03-06']
-      error: true
+      result: ['2016-03-06']
     - expression: "@2016-02-28 + 1 day"
       result: ['2016-02-29']
     - expression: "@2016-02-28 + 2 days"
@@ -521,6 +539,14 @@ tests:
       result: [true]
     - expression: "@T23:59:23 + 2 days"
       error: true
+    - expression: "@T23:59 + 60000 milliseconds = @T00:00"
+      result: [true]
+    - desc: The quantity value truncated from 2.9 minutes to 2 minutes in operation with 2010-01-01T23:59
+      expression: "@T23:59 + 2.9 minutes = @T00:01"
+      result: [true]
+    - desc: The quantity value truncated from -2.9 minutes to -2 minutes in operation with 2010-01-01T23:59
+      expression: "@T23:59 - 2.9 minutes = @T23:57"
+      result: [true]
     - expression: "@T23:59:23 + 5 milliseconds = @T23:59:23.005"
       result: [true]
     - expression: "@T23:59:23 + 1.5 seconds = @T23:59:24.500"
@@ -545,8 +571,7 @@ tests:
     - expression: "@2016-02-28 - 1.5 weeks"
       result: ['2016-02-21']
     - expression: "@2016-02-28 + 1.5 'wk'"
-      #result: ['2016-03-06']
-      error: true
+      result: ['2016-03-06']
     - expression: "@2016-02-28 + 1.5 day"
       result: ['2016-02-29']
     - expression: "@T23:59:23 + 1.5 hours = @T00:59:23"
