--- a/test/cases/6.6_math.yaml
+++ b/test/cases/6.6_math.yaml
@@ -140,6 +140,8 @@ tests:
       result: []
     - expression: 1 year / 1 'mo'
       result: []
+    - expression: 1 month / 1 'mo'
+      result: []
     - expression: 1 / 3 months
       result: []
   - 'group: Compatible duration units in division':
@@ -160,6 +162,8 @@ tests:
     - expression: 1 year / 6 months = 2
       result: [true]
     - expression: 3 month / 2 year = 1 / 8
+      result: [true]
+    - expression: 1 week / 1 'wk' = 1
       result: [true]
   - desc: '** Allow division of a UCUM duration quantity'
     expression: 3 's' / 3 milliseconds = 1000
@@ -264,7 +268,8 @@ tests:
     - expression: (1 year).toQuantity('seconds') + (1 'a').toQuantity('s') = 63093600 seconds # 365*24*60*60 seconds + 31557600 's'
       result: [true]
   - desc: '** Changing the places of the terms may change the sum because of the year/month conversion factor'
-    expression: (1 year + 6 months).toQuantity('seconds') + (1 'a').toQuantity('s') - (2.5 days).toQuantity('seconds') = (1 'a').toQuantity('s') + (6 months).toQuantity('seconds') + (1 year).toQuantity('seconds') # 0.5 year = 365 days/2 = 182.5 days;  6 month = 180 days
+    # (1 year + 6 months) = 18 months; 1 year = 365 days;  12 months = 360 days
+    expression: (1 year + 6 months).toQuantity('seconds') + (1 'a').toQuantity('s') + (5 days).toQuantity('seconds') = (1 'a').toQuantity('s') + (6 months).toQuantity('seconds') + (1 year).toQuantity('seconds')
     result: [true]
   - desc: '** Changing the places of the terms does not change the sum'
     expression: (1 year).toQuantity('seconds') + (6 'mo').toQuantity('s') + (1 'a').toQuantity('s') = (1 'a').toQuantity('s') + (6 'mo').toQuantity('s') + (1 year).toQuantity('seconds')
@@ -275,6 +280,25 @@ tests:
   - desc: '** Can add a UCUM time-valued quantity to an UCUM time-valued quantity'
     expression: 2 'a' + 1 'a' = 3 'a'
     result: [true]
+  - 'group: Convert to a smaller duration unit when adding two quantities':
+    - expression: 7 days + 12 hours
+      result:
+        - 180 hours
+    - expression: 12 hours + 7 days
+      result:
+        - 180 hours
+    - expression: 7 'd' + 12 'h'
+      result:
+        - 180 'h'
+    - expression: 12 'h' + 7 'd'
+      result:
+        - 180 'h'
+    - expression: 1 year + 6 months
+      result:
+        - 18 months
+    - expression: 1 'a' + 6 'mo'
+      result:
+        - 18 'mo'
 
   - desc: '6.6.4 substraction'
   - desc: '** Can subtract two numbers'
@@ -561,21 +585,24 @@ tests:
       result: [true]
     - expression: "@T23:59:23.005 + 1990 milliseconds = @T23:59:24.995"
       result: [true]
-# From the FHIRPath specification: "For precisions above seconds, the decimal
-# portion of the time-valued quantity is ignored, since date/time arithmetic
-# above seconds is performed with calendar duration semantics."
-    - expression: "@2016-02-29 + 1.5 year"
-      result: ['2017-02-28']
-    - expression: "@2016-02-28 + 1.5 weeks"
-      result: ['2016-03-06']
-    - expression: "@2016-02-28 - 1.5 weeks"
-      result: ['2016-02-21']
-    - expression: "@2016-02-28 + 1.5 'wk'"
-      result: ['2016-03-06']
-    - expression: "@2016-02-28 + 1.5 day"
-      result: ['2016-02-29']
-    - expression: "@T23:59:23 + 1.5 hours = @T00:59:23"
-      result: [true]
+    - 'group: Date/Time Arithmetic with decimal duration values':
+        # From the FHIRPath specification: "For precisions above seconds, the decimal
+        # portion of the time-valued quantity is ignored, since date/time arithmetic
+        # above seconds is performed with calendar duration semantics."
+      - expression: "@2016-02-29 + 1.5 year"
+        result: ['2017-02-28']
+      - expression: "@2016-02-28 + 1.5 weeks"
+        result: ['2016-03-06']
+      - expression: "@2016-02-28 - 1.5 weeks"
+        result: ['2016-02-21']
+      - expression: "@2016-02-28 + 1.5 'wk'"
+        result: ['2016-03-06']
+      - expression: "@2016-02-28 + 1.5 day"
+        result: ['2016-02-29']
+      - expression: "@T23:59:23 + 1.5 hours = @T00:59:23"
+        result: [true]
+      - expression: '@2011-01-10 + 1 year + 6 months = @2011-01-10 + (1 year + 6 months)'
+        result: [true]
     - expression: "Patient.birthDate - 1 day = @1974-12-24"
       model: r4
       inputfile: patient-example.json
